--- a/src/java/atmatm6/proxylauncher/dialogs/LoginDialog.form
+++ b/src/java/atmatm6/proxylauncher/dialogs/LoginDialog.form
@@ -100,7 +100,7 @@
           </component>
         </children>
       </grid>
-      <grid id="68bb5" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="68bb5" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -121,12 +121,20 @@
               <text value="" noi18n="true"/>
             </properties>
           </component>
-          <component id="a1bd2" class="javax.swing.JButton" binding="launcherButton" default-binding="true">
+          <component id="5295c" class="javax.swing.JComboBox" binding="loggedInComboBox" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="21d12" class="javax.swing.JLabel" binding="loggedinlabel">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Launcher"/>
+              <enabled value="true"/>
+              <labelFor value="5295c"/>
+              <text value="Logged in:"/>
             </properties>
           </component>
         </children>
