--- a/src/java/atmatm6/proxylauncher/dialogs/LauncherGUI.form
+++ b/src/java/atmatm6/proxylauncher/dialogs/LauncherGUI.form
@@ -115,7 +115,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Sign Out and Restart"/>
+                  <text value="Sign Out and Exit"/>
                 </properties>
               </component>
               <grid id="40aa6" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
